force-app/main/default/objects/Case/fields/Delivery_Phase__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phase__c</fullName>
    <label>Delivery Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Pre-Implementation Kick-off</fullName>
            </value>
            <value>
                <fullName>1 - Set Up and Configuration</fullName>
            </value>
            <value>
                <fullName>2 - VAN Training</fullName>
            </value>
            <value>
                <fullName>3 - Funding</fullName>
            </value>
            <value>
                <fullName>4 - VAN Reporting and Reconciliation</fullName>
            </value>
            <value>
                <fullName>1 - Planning &amp; Preparation</fullName>
            </value>
            <value>
                <fullName>2 - Development ( API integration)</fullName>
            </value>
            <value>
                <fullName>3 - UAT</fullName>
            </value>
            <value>
                <fullName>4 - Live testing</fullName>
            </value>
            <value>
                <fullName>5 - Production cut over</fullName>
            </value>
            <value>
                <fullName>Unassigned Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>