force-app/main/default/objects/Case/fields/Delivery_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Ticket is a Delivery Ticket. Used in WF Rule so field can be used in Sharing Settings for Cases.</description>
    <label>Delivery Ticket</label>
    <type>Checkbox</type>
</CustomField>