force-app/main/default/objects/Case/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <inlineHelpText>This field will display the Delivery Type that is selected in the related Opportunity.</inlineHelpText>
    <label>Delivery Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>