force-app/main/default/objects/Case/fields/Demo_API_ECN_and_Test_Scenario_Sent__c.field-meta.xml
<CustomField>
    <fullName>Demo_API_ECN_and_Test_Scenario_Sent__c</fullName>
    <inlineHelpText>Automatically enters the date that the Demo API and ECN credentials were manually sent to the client, when the relevant task status is moved to Completed</inlineHelpText>
    <label>Demo API, ECN and Test Scenario Sent</label>
    <type>Date</type>
</CustomField>