force-app/main/default/objects/Case/fields/Demo_API_ECN_and_Test_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Demo_API_ECN_and_Test_Task_Created__c</fullName>
    <label>Demo API, ECN and Test Task Created</label>
    <type>Date</type>
</CustomField>