force-app/main/default/objects/Case/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Product Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Abandon Registration</fullName>
            </value>
            <value>
                <fullName>Account Suspension</fullName>
            </value>
            <value>
                <fullName>Actual Chargeback</fullName>
            </value>
            <value>
                <fullName>Add Email</fullName>
            </value>
            <value>
                <fullName>Add Email Address</fullName>
            </value>
            <value>
                <fullName>Add FeeNett product</fullName>
            </value>
            <value>
                <fullName>Add new Currency</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
            <value>
                <fullName>Amend Customised Reports</fullName>
            </value>
            <value>
                <fullName>Amend Limits</fullName>
            </value>
            <value>
                <fullName>Amend Merchant Name</fullName>
            </value>
            <value>
                <fullName>Amend Report Subscription</fullName>
            </value>
            <value>
                <fullName>Amend VAN Issue</fullName>
            </value>
            <value>
                <fullName>API Configuration</fullName>
            </value>
            <value>
                <fullName>API Investigation</fullName>
            </value>
            <value>
                <fullName>Authorisation Cancellation</fullName>
            </value>
            <value>
                <fullName>Bank Account (DDR)</fullName>
            </value>
            <value>
                <fullName>Bank Fax - Auth Reversal</fullName>
            </value>
            <value>
                <fullName>Bank Fax - Auth Verification</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Bank Query- Code Cancelation</fullName>
            </value>
            <value>
                <fullName>Bank Query- Confirm Transaction</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Business Details</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Cancel VAN issue</fullName>
            </value>
            <value>
                <fullName>Certificate Change</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Change Email Address</fullName>
            </value>
            <value>
                <fullName>Change Report Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>