force-app/main/default/objects/Case/fields/Development_Checkpoint_Completed__c.field-meta.xml
<CustomField>
    <fullName>Development_Checkpoint_Completed__c</fullName>
    <inlineHelpText>This is automatically populated when the development checkpoint task is completed</inlineHelpText>
    <label>Development Checkpoint Completed</label>
    <type>Date</type>
</CustomField>