force-app/main/default/objects/Case/fields/Development_Checkpoint_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Checkpoint_Due_Date__c</fullName>
    <inlineHelpText>This is the due date of the development checkpoint. Initally set to the Projected Development Completed.
This is automatically set to be the same as the relevant Task due date.
This will change automatically, when the due date is changed in the task.</inlineHelpText>
    <label>Development Checkpoint Due Date</label>
    <type>Date</type>
</CustomField>