force-app/main/default/objects/Case/fields/Development_Checkpoint_Start__c.field-meta.xml
<CustomField>
    <fullName>Development_Checkpoint_Start__c</fullName>
    <inlineHelpText>Phase 2 Start - The development checkpoint task is created as a reminder for Delivery owner to check in with the client on the progress.</inlineHelpText>
    <label>Development Checkpoint Start</label>
    <type>Date</type>
</CustomField>