force-app/main/default/objects/Case/fields/Dormant_Category__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Category__c</fullName>
    <label>Dormant Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Product does not suit business needs</fullName>
            </value>
            <value>
                <fullName>Did not intend to register for the product</fullName>
            </value>
            <value>
                <fullName>On ISR in error</fullName>
            </value>
            <value>
                <fullName>No Information</fullName>
            </value>
            <value>
                <fullName>Unable to contact after multiple attempts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>