force-app/main/default/objects/Case/fields/Dormant_Historical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Historical_Notes__c</fullName>
    <inlineHelpText>This shows the history of the ticket&#39;s dormant notes</inlineHelpText>
    <label>Dormant Historical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>