force-app/main/default/objects/Case/fields/Dormant_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Reason__c</fullName>
    <inlineHelpText>This is a free text area to put in any notes regarding the Dormant status</inlineHelpText>
    <label>Dormant Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>