force-app/main/default/objects/Case/fields/End_of_Phase_2_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>End_of_Phase_2_Progress_Status__c</fullName>
    <formula>Actual_Development_Completed__c - Projected_Development_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End of Phase 2 Progress Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>