force-app/main/default/objects/Case/fields/Enter_Confirm_Delivery_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Enter_Confirm_Delivery_Completed_Date__c</fullName>
    <inlineHelpText>Enter the date when the delivery has been confirmed as being completed.</inlineHelpText>
    <label>Confirmation of Delivery Completed Date</label>
    <type>Date</type>
</CustomField>