force-app/main/default/objects/Case/fields/Enter_Demo_API_and_ECN_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Enter_Demo_API_and_ECN_Credentials__c</fullName>
    <label>Demo API and ECN Credentials</label>
    <type>TextArea</type>
</CustomField>