force-app/main/default/objects/Case/fields/Enter_Kick_off_Call_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Enter_Kick_off_Call_Completed_Date__c</fullName>
    <inlineHelpText>This is manually filled in, when the kick-off call is completed</inlineHelpText>
    <label>Kick-off Call Completed Date</label>
    <type>Date</type>
</CustomField>