force-app/main/default/objects/Case/fields/Enter_NDA_Countersigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Enter_NDA_Countersigned_Date__c</fullName>
    <inlineHelpText>Enter the date that the NDA documentation was confirmed and countersigned.</inlineHelpText>
    <label>NDA Countersigned Date</label>
    <type>Date</type>
</CustomField>