force-app/main/default/objects/Case/fields/Enter_NDA_Developer_License_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Enter_NDA_Developer_License_Signed_Date__c</fullName>
    <inlineHelpText>Confirm paperwork has been returned and enter the date that the NDA/Developer documentation was signed.</inlineHelpText>
    <label>NDA/Developer License Signed Date</label>
    <type>Date</type>
</CustomField>