force-app/main/default/objects/Case/fields/Enter_Pre_Kick_off_Quest_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Enter_Pre_Kick_off_Quest_Completed_Date__c</fullName>
    <inlineHelpText>Enter the date that the pre kick-off questionnaire was completed and returned.</inlineHelpText>
    <label>Pre Kick-off Quest Completed Date</label>
    <type>Date</type>
</CustomField>