force-app/main/default/objects/Case/fields/Enter_Scheduled_Kick_Off_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Enter_Scheduled_Kick_Off_Call_Date__c</fullName>
    <inlineHelpText>This field is manually  entered for the date that the kick-off call has been scheduled.</inlineHelpText>
    <label>Scheduled Kick-off Call Date</label>
    <type>Date</type>
</CustomField>