force-app/main/default/objects/Case/fields/Estimated_Delivery_Date_History__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date_History__c</fullName>
    <inlineHelpText>This field records the history each time the estimated delivery time has been changed</inlineHelpText>
    <label>Estimated Delivery Date History</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>