force-app/main/default/objects/Case/fields/Estm_Comp_Change_Author__c.field-meta.xml
<CustomField>
    <fullName>Estm_Comp_Change_Author__c</fullName>
    <label>Estm Comp Change Author</label>
    <type>TextArea</type>
</CustomField>