force-app/main/default/objects/Case/fields/Estm_Comp_Date_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Estm_Comp_Date_Change_Date__c</fullName>
    <inlineHelpText>This is the date when the Estimated Completion Date was last changed.</inlineHelpText>
    <label>Estm Comp Date Change Date</label>
    <type>Date</type>
</CustomField>