force-app/main/default/objects/Case/fields/Estm_Comp_Date_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Estm_Comp_Date_Change_Reason__c</fullName>
    <label>Estm Comp Date Change Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>