force-app/main/default/objects/Case/fields/FARRF_Frequency__c.field-meta.xml
<CustomField>
    <fullName>FARRF_Frequency__c</fullName>
    <label>FARRF Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>