force-app/main/default/objects/Case/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <formula>If(Created_Month__c =&#39;February&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>