force-app/main/default/objects/Case/fields/Final_Solution__c.field-meta.xml
<CustomField>
    <fullName>Final_Solution__c</fullName>
    <label>Final Solution</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>