force-app/main/default/objects/Case/fields/First_Ownership__c.field-meta.xml
<CustomField>
    <fullName>First_Ownership__c</fullName>
    <label>First Ownership</label>
    <length>100</length>
    <type>Text</type>
</CustomField>