force-app/main/default/objects/Case/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <formula>Account.First_Transaction_Date__c</formula>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>