force-app/main/default/objects/Case/fields/First_Transaction_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Email_Sent__c</fullName>
    <inlineHelpText>This is the date when the &#39;First Transaction Settled&#39; email was sent to the client.  This date is automatically set.</inlineHelpText>
    <label>First Transaction Email Sent</label>
    <type>Date</type>
</CustomField>