force-app/main/default/objects/Case/fields/First_Transaction_Email_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Email_Task_Created__c</fullName>
    <label>First Transaction Email Task Created</label>
    <type>Date</type>
</CustomField>