force-app/main/default/objects/Case/fields/Funcding_Model_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Funcding_Model_Additional_Comments__c</fullName>
    <label>Funding Model Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>