force-app/main/default/objects/Case/fields/Funding_account_rec_report_FTP__c.field-meta.xml
<CustomField>
    <fullName>Funding_account_rec_report_FTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funding account rec report (FTP)</label>
    <type>Checkbox</type>
</CustomField>