force-app/main/default/objects/Case/fields/Funding_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Funding_Confirmed__c</fullName>
    <inlineHelpText>Please enter the date when the funds are confirmed in the system.</inlineHelpText>
    <label>Funding Confirmed</label>
    <type>Date</type>
</CustomField>