force-app/main/default/objects/Case/fields/Funding_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Due_Date__c</fullName>
    <description>This is the date that has been agreed on by the client and the delivery team member as to when the funds will be added.</description>
    <inlineHelpText>Enter the agreed funding date.</inlineHelpText>
    <label>Funding Due Date</label>
    <type>Date</type>
</CustomField>