force-app/main/default/objects/Case/fields/Funding_Model__c.field-meta.xml
<CustomField>
    <fullName>Funding_Model__c</fullName>
    <inlineHelpText>Compulsary to fill in at Delivery API Phase 1</inlineHelpText>
    <label>Funding Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Funding On Activation</fullName>
            </value>
            <value>
                <fullName>Funding On Authorisation</fullName>
            </value>
            <value>
                <fullName>Funding On Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>