force-app/main/default/objects/Case/fields/Funding_Not_Confirmed_by_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Not_Confirmed_by_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is automatically filled when the task &#39;Desktop Delivery - Funding Not Confirmed by Due Date&#39; is completed</inlineHelpText>
    <label>Funding Not Confirmed by Due Date</label>
    <type>Checkbox</type>
</CustomField>