force-app/main/default/objects/Case/fields/Funding_Not_Confirmed_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Funding_Not_Confirmed_Email_Sent__c</fullName>
    <inlineHelpText>This field is automatically populated if the &#39;Funding Not Confirmed By Due Date&#39; field is selected.</inlineHelpText>
    <label>Funding Not Confirmed Email Sent</label>
    <type>Date</type>
</CustomField>