force-app/main/default/objects/Case/fields/Funding_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Funding_Task_Completed__c</fullName>
    <inlineHelpText>This will be automatically entered when the Check Funding Task is completed</inlineHelpText>
    <label>Funding Task Completed</label>
    <type>Date</type>
</CustomField>