force-app/main/default/objects/Case/fields/Funds_Not_Conf_By_Due_Date_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Funds_Not_Conf_By_Due_Date_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Task was created.  The Task is created if the funds have not been confirmed 24 hours prior to the &quot;Enter Funding Due Date&quot; field date.  This is automatically populated.</inlineHelpText>
    <label>Funds Not Conf By Due Date Task Created</label>
    <type>Date</type>
</CustomField>