force-app/main/default/objects/Case/fields/Funds_Not_Conf_By_New_Date_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Funds_Not_Conf_By_New_Date_Task_Created__c</fullName>
    <inlineHelpText>The date that the &quot;Desktop Delivery - No Funds after 1 Week revised Due Date&quot; Task was created.</inlineHelpText>
    <label>Funds Not Conf By New Date Task Created</label>
    <type>Date</type>
</CustomField>