force-app/main/default/objects/Case/fields/Hdden_Number_of_times_ticket_is_reopened__c.field-meta.xml
<CustomField>
    <fullName>Hdden_Number_of_times_ticket_is_reopened__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hdden Number of times ticket is reopened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>