force-app/main/default/objects/Case/fields/Hidden_24Hr_VANs_Setting_Completed_Check__c.field-meta.xml
<CustomField>
    <fullName>Hidden_24Hr_VANs_Setting_Completed_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>this will check 24 hour prior to due date of Vans setting Questionnaire, to check if VANS setting questionnaire is completed</inlineHelpText>
    <label>Hidden 24Hr VANs Setting Completed Check</label>
    <type>Checkbox</type>
</CustomField>