force-app/main/default/objects/Case/fields/Hidden_3_Days_API_Questionnaire_Complete__c.field-meta.xml
<CustomField>
    <fullName>Hidden_3_Days_API_Questionnaire_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden 3 Days API Questionnaire Complete</label>
    <type>Checkbox</type>
</CustomField>