force-app/main/default/objects/Case/fields/Hidden_5_Day_Chbox_for_Schedule_Kick_off__c.field-meta.xml
<CustomField>
    <fullName>Hidden_5_Day_Chbox_for_Schedule_Kick_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden 5 Day Chbox for Schedule Kick-off</label>
    <type>Checkbox</type>
</CustomField>