force-app/main/default/objects/Case/fields/Hidden_API_Check_Fund_Task_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Hidden_API_Check_Fund_Task_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is checked by a time trigger when the delivery moved from phase 3 to 4.  The checkbox will set the date 5 days before the Projected Live Testing Completed date field setting.</inlineHelpText>
    <label>Hidden API Check Fund Task Trigger</label>
    <type>Checkbox</type>
</CustomField>