force-app/main/default/objects/Case/fields/Hidden_assignee_name_or_queue__c.field-meta.xml
<CustomField>
    <fullName>Hidden_assignee_name_or_queue__c</fullName>
    <label>Hidden assignee name or queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>