force-app/main/default/objects/Case/fields/Hidden_CC_Address__c.field-meta.xml
<CustomField>
    <fullName>Hidden_CC_Address__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Hidden CC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>