force-app/main/default/objects/Case/fields/Hidden_CC_Email_Address_Dump__c.field-meta.xml
<CustomField>
    <fullName>Hidden_CC_Email_Address_Dump__c</fullName>
    <label>Hidden CC Email Address Dump</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>