force-app/main/default/objects/Case/fields/Hidden_Change_Status_1_to_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Change_Status_1_to_2_Date__c</fullName>
    <description>This is the date that the status was changed from 1 to 2.</description>
    <label>Hidden Change Status 1 to 2 Date</label>
    <type>Date</type>
</CustomField>