force-app/main/default/objects/Case/fields/Hidden_Counter_for_Tickets_Within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Counter_for_Tickets_Within_SLA__c</fullName>
    <formula>If (  AND(OR(RecordTypeId = &#39;01290000000hwKc&#39;,RecordTypeId = &#39;01290000000i3QS&#39;, RecordTypeId = &#39;01290000000i3QX&#39;,  RecordTypeId = &#39;01290000000huwY&#39;, RecordTypeId =&#39;01290000000iCRi&#39;), KPI_Met__c = true), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Counter for Tickets Within SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>