force-app/main/default/objects/Case/fields/Hidden_Current_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Current_Task_Subject__c</fullName>
    <label>Hidden Current Task Subject</label>
    <type>TextArea</type>
</CustomField>