force-app/main/default/objects/Case/fields/Hidden_Dormant_Status_Stop_Time__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Dormant_Status_Stop_Time__c</fullName>
    <label>Hidden Dormant Status Stop Time</label>
    <type>DateTime</type>
</CustomField>