force-app/main/default/objects/Case/fields/hidden_email_body_field__c.field-meta.xml
<CustomField>
    <fullName>hidden_email_body_field__c</fullName>
    <label>hidden email body field</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>