force-app/main/default/objects/Case/fields/Hidden_field_showing_Domain__c.field-meta.xml
<CustomField>
    <fullName>Hidden_field_showing_Domain__c</fullName>
    <formula>IF(ISBLANK( Contact.Email ),(SUBSTITUTE(SuppliedEmail, LEFT(SuppliedEmail, FIND(&quot;@&quot;, SuppliedEmail)), &quot;&quot;)),
(SUBSTITUTE(Contact.Email, LEFT(Contact.Email, FIND(&quot;@&quot;, Contact.Email)), &quot;&quot;)))</formula>
    <label>Hidden field showing Domain</label>
    <type>Text</type>
</CustomField>