force-app/main/default/objects/Case/fields/Hidden_Funding_Due_Date_Minus_24_Hours__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Funding_Due_Date_Minus_24_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is the field that will be populated by the workflow time dependant workflow rule</inlineHelpText>
    <label>Hidden Funding Due Date Minus 24 Hours</label>
    <type>Checkbox</type>
</CustomField>