force-app/main/default/objects/Case/fields/Hidden_Last_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Last_Case_Comment__c</fullName>
    <label>Last Case Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>