force-app/main/default/objects/Case/fields/Hidden_Last_Case_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Last_Case_Comment_Date__c</fullName>
    <label>Last Case Comment Date</label>
    <type>DateTime</type>
</CustomField>