force-app/main/default/objects/Case/fields/Hidden_Last_Case_Comment_User__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Last_Case_Comment_User__c</fullName>
    <label>Hidden Last Case Comment User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>