force-app/main/default/objects/Case/fields/Hidden_Phase_1_1_Week_Notification__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Phase_1_1_Week_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to determine whether the email should be sent to the client after 1 week.</description>
    <label>Hidden Phase 1 1 Week Notification</label>
    <type>Checkbox</type>
</CustomField>