force-app/main/default/objects/Case/fields/Hidden_Phase_1_2_Week_Notification__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Phase_1_2_Week_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked automatically 2 weeks after the Welcome email has been sent.  It will be used to create a task for the delivery staff member to call the client if the Contact made with client checkbox is not checked.</description>
    <label>Hidden Phase 1 2 Week Notification</label>
    <type>Checkbox</type>
</CustomField>