force-app/main/default/objects/Case/fields/Hidden_Phase_3_1_Week_Notification__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Phase_3_1_Week_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Phase 3 1 Week Notification</label>
    <type>Checkbox</type>
</CustomField>