force-app/main/default/objects/Case/fields/Hidden_Phase_4_8_Day_Notification__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Phase_4_8_Day_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Phase 4 8 Day Notification</label>
    <type>Checkbox</type>
</CustomField>