force-app/main/default/objects/Case/fields/Hidden_Refresh_area__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Refresh_area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hidden Refresh area</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>