force-app/main/default/objects/Case/fields/Hidden_Ticket_ECN__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Ticket_ECN__c</fullName>
    <label>Hidden Ticket ECN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>