force-app/main/default/objects/Case/fields/Hidden_Ticket_Subject_without_RE__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Ticket_Subject_without_RE__c</fullName>
    <formula>TRIM(SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
( SUBSTITUTE
(Subject, &quot;Fwd:&quot;, &quot;&quot;), 
&quot;Automatic Reply:&quot;, &quot;&quot;),
&quot;Out of Office:&quot;, &quot;&quot;), 
&quot;FW:&quot;, &quot;&quot;), 
&quot;Fw:&quot;, &quot;&quot;),
&quot;RE:&quot;, &quot;&quot;),
&quot;Re:&quot;, &quot;&quot;),
&quot;[eNett Service Centre] &quot;, &quot;&quot;),
&quot;R: &quot;, &quot;&quot;),
&quot;[eNett Service Centre]&quot;, &quot;&quot;))</formula>
    <label>Hidden Ticket Subject without RE</label>
    <type>Text</type>
</CustomField>