force-app/main/default/objects/Case/fields/Historical_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Historical_Solutions__c</fullName>
    <label>Historical Solutions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>