force-app/main/default/objects/Case/fields/Implementation_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Complete_Date__c</fullName>
    <label>Implementation Complete Date</label>
    <type>Date</type>
</CustomField>