force-app/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Description__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Funds Not Received</fullName>
            </value>
            <value>
                <fullName>Funds Delayed</fullName>
            </value>
            <value>
                <fullName>Funds Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>