force-app/main/default/objects/Case/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <formula>If(Created_Month__c =&#39;January&#39;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>