force-app/main/default/objects/Case/fields/JIRA_Key__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Key__c</fullName>
    <label>JIRA Key</label>
    <length>16</length>
    <type>Text</type>
</CustomField>